slice/src/components/section/section.scss
.section {
  position: relative;
  $this: &;

  & > .contextual-region {
    position: static;
  }

  &_inner-v-centered {
    display: flex;
    flex-direction: column;
  }

  &__v-inner {
    @include padding(35px 0, $md: 50px 0);
    @include min-height($sm: 500px, $md: 588px);
    display: flex;
    flex-direction: column;
    justify-content: center;

    &_a {
      @include min-height(310px, 400px, 496px);
      @include padding-bottom(60px, 123px);
    }

    &_b {
      @include min-height($sm: 500px, $md: 612px);
    }

    &_c {
      //@include padding(20px 0, 69px 0 44px);
      @include padding(20px 0, 80px 0 44px);
      @include min-height(150px, 244px);
    }

    &_d {
      @include padding(20px 0, 30px 0, 50px 0);
      @include min-height(150px, 280px, 244px);
    }

    &_f {
      @include min-height(310px, 400px, 496px);
    }
  }

  &__bg-wrap, &__bg {
    @include stretch-block();
  }

  &__bg-wrap {
    overflow: hidden;
    z-index: 0;

    &_mobile {
      @include display($sm: none);

      & + #{$this}__bg-wrap {
        @include display(none, block);
      }
    }
  }

  &__bg {
    background-size: cover;
    background-position: 50% 50%;
    z-index: -1;

    &_mobile {
      @include display($sm: none);

      & + #{$this}__bg {
        @include display(none, block);
      }
    }

    &_bottom {
      background-position: 50% 100%;
    }
  }

  &__bgSh {

    &:before {
      @include pseudo-block($top: 0, $left: 0);
      width: 100%;
      height: 133px;
      background: url("bg-shadow-1-r.png") repeat-x;
      background-size: contain;
    }
  }

  &_bg-color {

    &_a {
      background: $color-dark-blue;
    }

    &_b {
      background: #dedede;
    }

    &_c {
      background: $color-white-1;
    }

    &_f {
      background: $color-blue;
      color: #fff;

      h1, h2, h3, h4, h5, h6 {
        color: #fff;
      }
    }
  }

  &_ind {

    &_md {
      @include padding(30px 0, 50px 0 63px);
    }

    &_a {
      padding: 90px 0 50px;
    }

    &_b {
      @include padding(40px 0 30px, 60px 0 50px, 90px 0 76px);
    }

    &_c {
      @include padding(58px 0 30px, 58px 0 75px);

      .page-node-type-senator & {
        @include padding(10px 0 30px, 58px 0 75px);
      }
    }

    &_d {
      @include padding(40px 0, 50px 0 88px);
    }

    &_f {
      @include padding(40px 0 30px, 74px 0 50px);
    }

    &_j {
      @include padding(20px 0, 106px 0 115px);
    }

    &_h {
      @include padding(40px 0, 65px 0 152px);
    }

    &_i {
      @include padding(40px 0, 93px 0);
    }
  }

  &__sNav {
    padding: 10px;
    margin-bottom: 20px;
    z-index: 1;

    @include sm {
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
    }

    @include md {
      padding: 14px;
    }

    .page-node-type-senator & {
      margin-bottom: 0;
      z-index: 1;
    }

    .bContainer {

      @include sm {
        padding: 0 17px;
        display: flex;
        align-items: center;
      }

      & > * {
        margin: 0 0 10px;

        @include sm {
          padding: 0 28px 0 0;
          margin: 0;
        }
      }
    }

    #{$this}__bShare {
      margin-left: auto;
      padding: 0;
    }

    &_a {

      @include sm {
        top: 10px;
      }
    }

    &_b {
      background: $color-dark-blue;
      margin-bottom: 0;
      border-top: 1px solid #344b71;
      position: relative;

      & > * {
        margin: 0;
      }
    }
  }

  &__btnBack {
    position: absolute;
    left: 0;
    top: 0;

    @include sm {
      left: 55px;
      top: -40px;
    }

    @include md {
      left: 0;
      top: 0;
    }

    &_a {

      @include xs-only {
        top: -40px;

        .page-node-type-senator & {
          position: relative;
          top: auto;
          margin-bottom: 20px;
        }
      }

    }

    &_b {
      position: relative;
      margin-bottom: 20px;

      @include xs-only {
        top: -20px;
      }
    }
  }

  .bContainer {
    position: relative;
  }

  &__btnWrap {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-right: -5px;
    margin-left: -5px;

    & > * {
      margin-right: 5px;
      margin-left: 5px;
      margin-bottom: 10px;
    }

    &_gap {

      &_a {
        @include margin-bottom(30px, 40px);
      }

      &_b {
        @include margin-bottom(20px, 30px);
      }
    }
  }
}

.form-inline {

  @include sm {
    display: flex;
    justify-content: center;
    margin: 0 -10px 20px;
  }

  & > * {

    @include sm {
      margin: 0 10px;
    }

    label {
      display: block;
    }
  }
}

